<resources>
    <string name="app_name">Preferences</string>
    <string name="note_about_age_range">Age range preference allows us to suggest matches accordingly. Some matches may fall outside the specified range</string>
    <string name="preferences">Preferences</string>
    <string name="interested">Interested In</string>
    <string name="notification_notice">We strongly recommend to keep the notification ON. You don\'t want to miss a chat notification from your match</string>
    <string name="match_maker">Here to only help friends? Just hide your profile and be a match-maker</string>
    <string name="get_notification_note">Get notification continuously by whitelisting our app from battery optimization</string>
</resources>
